# cmxflow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  conda.yml  mkdocs.yml  plan.md  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: bump-and-tag.yml  ci.yml  docs.yml  release.yml
docs/: blocks.md  index.md  using-with-claude.md
docs/api/: core.md  io.md  operators.md  scores.md  utilities.md
examples/: basic_usage.ipynb  benchmark.csv  crystal_ligand.sdf
examples/.claude/: settings.local.json
examples/docking/: docking.ipynb  docking_ILS.sdf  docking_defaults.sdf  docking_scaffold_indexed.sdf  library.csv  scaffold_indexed_docking.ipynb
overrides/: main.html
src/cmxflow/: __init__.py  block.py  cmxmol.py  parameter.py  workflow.py
src/cmxflow/mcp/: __init__.py  server.py  state.py
src/cmxflow/operators/: __init__.py  align.py  base.py  cluster.py  confgen.py  dedup.py  filter.py  ionize.py  method.py  select.py  sim2d.py  sim3d.py  standardize.py
src/cmxflow/operators/dock/: __init__.py  _kernels.py  dock.py  ec.py  pose.py  scaffold_index.py  score.py  template.py
src/cmxflow/opt/: __init__.py  optuna.py
src/cmxflow/scores/: __init__.py  automatic.py  cluster.py  shape.py
src/cmxflow/sinks/: __init__.py  molecule.py  table.py  writer.py
src/cmxflow/sources/: __init__.py  molecule.py  reader.py  table.py
src/cmxflow/utils/: __init__.py  parallel.py  pymol.py  serial.py  text.py
tests/: test_parallel.py  test_registry.py  test_workflow_io.py
tests/mcp/: __init__.py  test_block_pickle.py  test_server.py
tests/operators/: test_cluster.py  test_dedup.py  test_filter.py  test_ionize.py  test_method.py  test_select.py  test_standardize.py
tests/operators/dock/: test_dock_components.py  test_dock_golden.py  test_ec.py  test_pose_opt.py  test_scaffold_index.py  test_score.py  test_template.py
tests/operators/dock/data/abl1/: active_ligand.sdf  congener_ligand.sdf  golden_pose_constrained.npy  golden_pose_flex.npy  golden_pose_ils.npy  golden_pose_indexed.npy  golden_pose_rigid.npy
tests/opt/: test_optuna.py
tests/scores/: test_automatic.py  test_cluster.py  test_shape.py
tests/sources/: __init__.py  test_gzip_readers.py
