[tool.poetry]
name = "cmxflow"
version = "0.3.0"
description = "A Python package for building and optimizing cheminformatics workflows using Bayesian optimization and LLM agents"
authors = ["Benjamin J. Shields"]
readme = "README.md"
packages = [{include = "cmxflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2025.4"
pandas = "^3.0"
pyarrow = "*"
scikit-learn = "^1.8"
optuna = "^4.0"
dimorphite-dl = "*"
fastmcp = "^3.0"

[tool.poetry.scripts]
cmxflow-mcp = "cmxflow.mcp:run"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
black = "^26.0"
ruff = "^0.15"
mypy = "^2.0"
pre-commit = "^4.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0"
mkdocstrings = {extras = ["python"], version = "^0.29"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# rdkit stubs are incomplete — suppress false positives from stub mismatches
[[tool.mypy.overrides]]
module = [
    "cmxflow.cmxmol",
    "cmxflow.sinks.molecule",
    "cmxflow.operators.confgen",
    "cmxflow.operators.dock.ec",
    "cmxflow.operators.dock.dock",
]
disable_error_code = ["override", "assignment", "no-any-return", "attr-defined"]
